Bug 1658207 - Set up and use the mCharacterMap in shared Family records more correctly, to accelerate font fallback searches. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D86490